--- a/index.html
+++ b/index.html
@@ -688,7 +688,7 @@ u^*(t) &amp;= -R^{-1}(t)B^T(t)\lambda (t)\\
 <div class="callout-icon-container">
 <i class="callout-icon"></i>
 </div>
-<p><strong>Matrix Riccati Differential Equation</strong></p>
+<p><strong>Matrix Ricatti Differential Equation</strong></p>
 </div>
 <div class="callout-content">
 <p><span class="math display">\[\dot{P}(t) = -[P(t)A(t) + A^T(t)P(t)+Q(t)-P(t)B(t)R^{-1}(t)B^T(t)P(t)]\]</span></p>
@@ -1483,7 +1483,7 @@ g(t,x) &amp;= A(t)x(t)
 <div class="callout-icon-container">
 <i class="callout-icon"></i>
 </div>
-<p><strong>Coupled Ricatti equation</strong></p>
+<p><strong>Coupled Riccati equation</strong></p>
 </div>
 <div class="callout-content">
 <ul>
@@ -1577,6 +1577,22 @@ g(t,x) &amp;= A(t)x(t)
 <li><p>The paper lacks to <em>compare with existing stochastic control methods</em></p></li>
 <li><p>The paper is limited to simulations only, and doesn’t give an idea of how MCV controller can be applied to Real world data</p></li>
 <li><p>The paper is limited to continuous time, but for a real world application on digitized world a discrete time formulation would be of interest.</p></li>
+</ul>
+</div>
+</div>
+</div>
+<div class="callout callout-note callout-titled callout-style-default">
+<div class="callout-body">
+<div class="callout-title">
+<div class="callout-icon-container">
+<i class="callout-icon"></i>
+</div>
+<p><strong>Future Work</strong></p>
+</div>
+<div class="callout-content">
+<ul>
+<li>Create a discrete time MCV problem and analyse on real world data</li>
+<li>Instead of limiting to 2nd cumullant, expand the approach to higher cumullants and find the optimal for specific applications.</li>
 </ul>
 </div>
 </div>
