--- a/index.html
+++ b/index.html
@@ -1571,11 +1571,11 @@ g(t,x) &amp;= A(t)x(t)
 </div>
 <div class="callout-content">
 <ul>
-<li><p>The paper presented a noble idea of <em>MCV control</em>.</p></li>
-<li><p>The paper <em>formulates a generic MCV problem</em> and give a <em>solution for Linear system model</em>.</p></li>
+<li><p>The paper presented a noble idea of <strong>MCV control</strong>.</p></li>
+<li><p>The paper <strong>formulates a generic MCV problem</strong> and give a <strong>solution for Linear system model</strong>.</p></li>
 <li><p>The paper has also given a simulated application for MCV control</p></li>
-<li><p>The paper lacks to <em>compare with existing stochastic control methods</em></p></li>
-<li><p>The paper is limited to simulations only, and doesn’t give an idea of how MCV controller can be applied to Real world data</p></li>
+<li><p>The paper lacks to <strong>compare with existing stochastic control methods</strong></p></li>
+<li><p>The paper is limited to <strong>simulations only</strong>, and doesn’t give an idea of how MCV controller can be applied to Real world data</p></li>
 <li><p>The paper is limited to continuous time, but for a real world application on digitized world a discrete time formulation would be of interest.</p></li>
 </ul>
 </div>
