--- a/index.html
+++ b/index.html
@@ -1524,10 +1524,22 @@ g(t,x) &amp;= A(t)x(t)
 </div>
 </div>
 </div>
-<p>//# Seismic structure example</p>
-<p>//## Seismic structure example //::: columns //::: {.column width=“35%”} //<img data-src="./images/3dof.png" data-fig-align="left"> //:::</p>
-<p>//::: {.column width=“65%”}</p>
-<p>//::: //:::</p>
+<!--
+
+# Seismic structure example
+
+## Seismic structure example
+::: columns
+::: {.column width="35%"}
+![](./images/3dof.png){fig-align="left"}
+:::
+
+::: {.column width="65%"}
+
+:::
+:::
+
+-->
 </section></section>
 <section>
 <section id="conclusion" class="title-slide slide level1 agenda-slide center">
@@ -1598,8 +1610,11 @@ g(t,x) &amp;= A(t)x(t)
 </div>
 </div>
 </section>
-<section id="thank-you" class="slide level2">
-<h2>THANK YOU</h2>
+<section id="section" class="slide level2">
+<h2></h2>
+<div class="center-xy">
+<p><strong>THANK YOU</strong></p>
+</div>
 
 <img src="images/temple.png" class="slide-logo r-stretch"><div class="footer footer-default">
 <p>ECE 5412</p>
