--- a/index.html
+++ b/index.html
@@ -1605,6 +1605,8 @@ g(t,x) &amp;= A(t)x(t)
 <ul>
 <li>Create a discrete time MCV problem and analyse on real world data</li>
 <li>Instead of limiting to 2nd cumullant, expand the approach to higher cumullants and find the optimal for specific applications.</li>
+<li>Analyzing and comparing MCV with Model Predictive Control (MPC)</li>
+<li>Apply MCV in Distributed Collaborative multi-agent application (e.g., control a swarm of drones)</li>
 </ul>
 </div>
 </div>
@@ -1612,11 +1614,15 @@ g(t,x) &amp;= A(t)x(t)
 </section>
 <section id="section" class="slide level2">
 <h2></h2>
-<div class="center-xy">
-<p><strong>THANK YOU</strong></p>
-</div>
+<p><img data-src="./images/thankyou.png" data-fig-align="center"> <!--
+::: {.center-xy}
 
-<img src="images/temple.png" class="slide-logo r-stretch"><div class="footer footer-default">
+**THANK YOU**
+
+:::
+--></p>
+<p><img src="images/temple.png" class="slide-logo"></p>
+<div class="footer footer-default">
 <p>ECE 5412</p>
 </div>
 </section></section>
