--- a/index.html
+++ b/index.html
@@ -917,7 +917,7 @@ J_{RS} &amp;= \beta_1(J) - \frac{\theta}{4} \beta_2(J) + O(\theta^2) \\
 <p><strong>Definition 1</strong></p>
 </div>
 <div class="callout-content">
-<p>A function M ia an <em>admissible mean cost function</em> if there exists an admissible control law <span class="math inline">\(k\)</span> such that <span class="math inline">\(V_1(t,x;k) = M(t,x), \forall t \in T\)</span> and <span class="math inline">\(x \in \mathbb{R}^n\)</span>.</p>
+<p>A function <span class="math inline">\(M\)</span> is an <em>admissible mean cost function</em> if there exists an admissible control law <span class="math inline">\(k\)</span> such that <span class="math inline">\(V_1(t,x;k) = M(t,x), \forall t \in T\)</span> and <span class="math inline">\(x \in \mathbb{R}^n\)</span>.</p>
 </div>
 </div>
 </div>
