--- a/index.html
+++ b/index.html
@@ -1520,7 +1520,7 @@ g(t,x) &amp;= A(t)x(t)
 </div>
 <div class="callout-content">
 <p>with boundary conditions <span class="math inline">\(\mathcal{M}(t_F) = Q_F\)</span> and <span class="math inline">\(\mathcal{V}(t_F) = 0\)</span></p>
-<p><span class="math display">\[k^*_{V|M}(t,x) = -R^{-1}(t)B'(t)[\mathcal{M}(t) + \gamma(t)\mathcal{V}(t)]x\]</span></p>
+<p><span class="math display">\[k^*_{V|M}(t,x) = -R^{-1}(t)B'(t)[\mathcal{M}(t) + \gamma(t)\mathcal{V}(t)]x(t)\]</span></p>
 </div>
 </div>
 </div>
